Yay! Headers are no longer broken by long strings
We really shouldn't be using images that are a fixed size and can't be
stretched vertically.  If we want a gradient effect, the bottom can't
change colors right before it cuts off

--- a/imp/themes/default/screen.css
+++ b/imp/themes/default/screen.css
@@ -1,3 +1,8 @@
+.header {
+    background-color: #becaca;
+    background-image: none;
+}
+
 /* Mailbox page styling. */
 #mailboxLabel {
     margin-left: 20px;
